Работа над отчетами часть 1

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -15,7 +15,7 @@
         <div class="hospital-name" id="hospital-name">Загрузка...</div>
         <div class="navigation">
             <button onclick="location.href='/donor/list'">✎ Доноры</button>
-            <button onclick="location.href='/donor/reports'">📜 Отчеты</button>
+            <button onclick="location.href='/reports'">📜 Отчеты</button>
             <button onclick="location.href='/blood_bank'">🗑 Банк крови</button>
         </div>
     </div>
