--- a/app/static/css/main_styles.css
+++ b/app/static/css/main_styles.css
@@ -276,3 +276,19 @@ body {
   flex: 1;
   padding: 40px;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #2c3e50;
+    color: white;
+    text-align: center;
+    padding: 5px 20px;
+}
+
+.footer span {
+    margin-bottom: 20px;
+    text-align: center;
+}
